# matrix-crush

./: AGENTS.md  Cargo.toml  STORY.md  TODO.md  build.rs  readme.md
.cargo/: config.toml
.github/workflows/: pages.yml
assets/translations/: en.xml  id.xml
docs/: index.html
scripts/: build_wasm.ps1  build_wasm.sh
src/: app.rs  audio.rs  bootstrap.rs  level.rs  level_selection.rs  main.rs  savegame.rs
src/app/: draw.rs  state.rs  update.rs
src/effects/: mod.rs  particles.rs  shake.rs
src/effects/particles/: bomb_effect.rs  falling_gem.rs  mod.rs  sweep_effect.rs
src/game/: mod.rs
src/game/board/: mod.rs
src/game/progression/: level.rs  mod.rs
src/game/story/: dialogue.rs
src/layout/: board.rs  main_menu.rs  mod.rs
src/layout/board/: draw.rs  effects.rs  input.rs  logic.rs  mod.rs
src/matrix_match/: gem.rs
src/scenes/: mod.rs
src/scenes/gameplay/board/: draw.rs  effects.rs  input.rs  logic.rs  mod.rs  state.rs  ui.rs
src/scenes/menu/: mod.rs
src/scenes/menu/level_select/: layout.rs  mod.rs  render.rs  state.rs
src/scenes/menu/main_menu/: mod.rs  render.rs  state.rs
src/scenes/story/: mod.rs  research_center.rs  runner.rs
src/systems/: audio.rs  localization.rs  mod.rs  save.rs
src/systems/effects/: shake.rs
src/systems/effects/particles/: falling_gem.rs  particle.rs
web/: index.html
