[package]
name = "matrix-crush"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
directories = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winres = "0.1"

