[package]
name = "matrix_crushed"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
quick-xml = "0.37"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winres = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5.0"
chrono = "0.4.43"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[package.metadata.android]
package = "com.adjisoft.matrixcrushed"
label = "Matrix Crushed!"
assets = "assets"
icon = "icon.ico"
